test/libsolidity/syntaxTests/storageLayoutSpecifier/literal_cast.sol
contract at layout at uint(42) { }
// ----
// TypeError 6396: (22-30): The base slot of the storage layout must evaluate to a rational number.
